# William

./: .gitignore  Cargo.toml  LICENSE  Procfile  app.json  package-lock.json  package.json  process.env.js  process.env.ts  tsconfig.json
src/: global_state.rs  index.ts  main.rs  util.rs
src/commands/: age.rs  censor.rs  clean.rs  desusify.rs  mod.rs  ping.rs  ping.ts  poo.rs  shower.ts  stinkify.ts  susify.rs  uncensor.rs
src/events/: event_handler.rs
src/listeners/: mentionPrefixOnly.js  ready.ts
